src/objects/Apttus_Config2__NotificationFeed__c.object
<CustomObject>
    <description>A generic object to contain Notification Feeds generated by any object for any page</description>
    <fields>
        <fullName>Apttus_Config2__FieldName__c</fullName>
        <description>Field Name related to the Notification. E.g. if the notification is about a field update then the Field Name of the field that got update.</description>
        <inlineHelpText>Field Name related to the Notification. E.g. if the notification is about a field update then the Field Name of the field that got update.</inlineHelpText>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__FieldType__c</fullName>
        <description>Datatype of the field mentioned in the Field Name</description>
        <inlineHelpText>Datatype of the field mentioned in the Field Name</inlineHelpText>
        <label>Field Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__FieldValue__c</fullName>
        <description>Value of the field mentioned in the Field Name</description>
        <inlineHelpText>Value of the field mentioned in the Field Name</inlineHelpText>
        <label>Field Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__NotificationHeader__c</fullName>
        <description>Header to be displayed for the Notification Message for this Event</description>
        <inlineHelpText>Header to be displayed for the Notification Message for this Event</inlineHelpText>
        <label>NotificationHeader</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__NotificationMessage__c</fullName>
        <description>The message to be displayed in the notification for this Event</description>
        <inlineHelpText>The message to be displayed in the notification for this Event</inlineHelpText>
        <label>NotificationMessage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__NotificationType__c</fullName>
        <description>Type of the Notification. This may be used to display along with the Notifications or to filter the notifications.</description>
        <inlineHelpText>Type of the Notification. This may be used to display along with the Notifications or to filter the notifications.</inlineHelpText>
        <label>NotificationType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RelatedObjectName__c</fullName>
        <description>Name of the related Object from/for which this notification message is generated</description>
        <inlineHelpText>Name of the related Object from/for which this notification message is generated</inlineHelpText>
        <label>Related Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RelatedRecordIds__c</fullName>
        <description>Record Ids of the related records from the Related Object for/from which this notification message is generated</description>
        <inlineHelpText>Record Ids of the related records from the Related Object for/from which this notification message is generated</inlineHelpText>
        <label>Related Record Ids</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Notification Feed</label>
    <listViews>
        <fullName>Apttus_Config2__All</fullName>
        <columns>NAME</columns>
        <columns>Apttus_Config2__NotificationHeader__c</columns>
        <columns>Apttus_Config2__NotificationMessage__c</columns>
        <columns>Apttus_Config2__NotificationType__c</columns>
        <columns>Apttus_Config2__RelatedObjectName__c</columns>
        <columns>Apttus_Config2__RelatedRecordIds__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>NF-{000000}</displayFormat>
        <label>Notification Feed Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Notification Feeds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>